--- a/client/index.html
+++ b/client/index.html
@@ -4,62 +4,67 @@
   <meta charset="UTF-8">
   <title>Kang Game</title>
   <script src="/socket.io/socket.io.js"></script>
+  <style>
+    body {
+      background:#111;
+      color:#fff;
+      text-align:center;
+      font-family:sans-serif;
+      padding-top:80px;
+    }
+    input, button {
+      padding:10px;
+      font-size:16px;
+      margin:5px;
+    }
+  </style>
 </head>
-<body style="background:#111;color:#fff;text-align:center;">
-  <h1>🐉 KANG GAME</h1>
+<body>
 
-  <div id="login">
-    <input id="username" placeholder="ชื่อผู้เล่น">
-    <button onclick="login()">เข้าเกม</button>
-  </div>
+<h1>🐉 KANG GAME</h1>
 
-  <div id="lobby" style="display:none">
-    <h2>เลือกห้อง</h2>
-    <div id="rooms"></div>
-  </div>
+<div id="loginBox">
+  <input id="usernameInput" placeholder="ชื่อผู้เล่น">
+  <br>
+  <button onclick="doLogin()">เข้าเกม</button>
+</div>
 
-  <div id="room" style="display:none">
-    <h2>ผู้เล่นในห้อง</h2>
-    <ul id="players"></ul>
-    <button onclick="kang()">แคง</button>
-    <p id="result"></p>
-  </div>
+<div id="lobby" style="display:none;">
+  <h2>ล็อบบี้</h2>
+  <p id="playerInfo"></p>
+</div>
 
 <script>
   const socket = io();
 
-  function login(){
-    const name = username.value;
+  socket.on('connect', () => {
+    console.log('socket connected');
+  });
+
+  function doLogin() {
+    const input = document.getElementById('usernameInput');
+    const name = input.value.trim();
+
+    if (!name) {
+      alert('กรุณาใส่ชื่อผู้เล่น');
+      return;
+    }
+
     socket.emit('login', name);
   }
 
   socket.on('login_success', data => {
-    login.style.display = 'none';
-    lobby.style.display = 'block';
+    document.getElementById('loginBox').style.display = 'none';
+    document.getElementById('lobby').style.display = 'block';
 
-    for(const id in data.rooms){
-      rooms.innerHTML +=
-        `<button onclick="join(${id})">ห้อง ${id}</button><br>`;
-    }
+    document.getElementById('playerInfo').innerText =
+      `ชื่อ: ${data.username} | เครดิต: ${data.credit}`;
   });
 
-  function join(id){
-    socket.emit('join_room', id);
-    lobby.style.display = 'none';
-    room.style.display = 'block';
-  }
-
-  socket.on('room_update', list => {
-    players.innerHTML = list.map(p => `<li>${p}</li>`).join('');
-  });
-
-  function kang(){
-    socket.emit('KANG');
-  }
-
-  socket.on('game_result', r => {
-    result.innerText = `ผู้ชนะ: ${r.winner} ได้ ${r.win} เครดิต`;
+  socket.on('error_msg', msg => {
+    alert(msg);
   });
 </script>
+
 </body>
 </html>
